compiler/testData/diagnostics/tests/incompleteCode/incompleteEquals.kt
package a

fun foo(a: Any) = a <!DEBUG_INFO_MISSING_UNRESOLVED!>==<!SYNTAX!><!><!>